# mimic

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
encoder/: audio.py  inference.py  preprocess.py  train.py
encoder/data_objects/: __init__.py  random_cycler.py  speaker.py
src/memic/: cli.py  demo_cli.py  demo_toolbox.py  encoder_preprocess.py  encoder_train.py  synthesizer_preprocess_audio.py  synthesizer_preprocess_embeds.py  synthesizer_train.py  vocoder_preprocess.py  vocoder_train.py
src/memic/cli/: cli.py  demo_cli.py  demo_toolbox.py  encoder_preprocess.py  encoder_train.py  synthesizer_preprocess_audio.py  synthesizer_preprocess_embeds.py  synthesizer_train.py  vocoder_preprocess.py  vocoder_train.py
src/memic/encoder/: audio.py  config.py  inference.py  model.py  params_data.py  preprocess.py  train.py  visualizations.py
src/memic/encoder/data_objects/: speaker.py  speaker_batch.py  speaker_verification_dataset.py
src/memic/synthesizer/: audio.py  inference.py  preprocess.py  synthesize.py  synthesizer_dataset.py  train.py
src/memic/synthesizer/models/: tacotron.py
src/memic/synthesizer/utils/: cleaners.py  plot.py  text.py
src/memic/toolbox/: toolbox.py  ui.py
src/memic/utility/: better_enum.py  version_control.py
src/memic/utils/: argutils.py  default_models.py  logmmse.py  profiler.py
src/memic/vocoder/: audio.py  display.py  distribution.py  gen_wavernn.py  hparams.py  inference.py  train.py  vocoder_dataset.py
src/memic/vocoder/models/: deepmind_version.py  fatchord_version.py
toolbox/: toolbox.py
